# asc

./: .gitignore  README.md  avc.cabal  cabal.project  nix-shell
src/exe/: Main.hs
src/langs/: MoreCore.hs  SimpleCore.hs
src/lib/Control/: Termination.hs
src/lib/Data/: Ap.hs  Fix.hs  TagBag.hs
src/lib/Data/Fix/: List.hs  Rose.hs
src/lib/Language/: Impl.hsig
